# sql-interp

./: .gitignore  .hlint.yaml  README.md  hie.yaml  project-cis5520.cabal  sql-interp.cabal
CSV/Premier/: 2019-20 2.csv  File_description 2.txt
CSV/Sample/: grades.csv  sample.csv  student 2.csv
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: CommandLine  CommandLine.hs  Gen.hs  GenSQL.hs  GenVSQL.hs  Interpretation.hs  JSONSyntax.hs  Optimization.hs  Parser.hs  PrettyPrinter.hs  SQLParser.hs  SQLPrinter.hs  SQLSyntax.hs  TableParser.hs  TablePrinter.hs  TableSyntax.hs  Utils.hs
test/: Spec.hs  TestGen.hs  TestInterpretation.hs  TestOptimization.hs  TestParser.hs  TestPrettyPrinter.hs  TestSQL.hs  TestTable.hs  TestUtils.hs
test/CSV/PremierLeague2023/: 2023_PL_standings.csv  2023_away_teams_stats.csv  2023_home_teams_stats.csv  2023_matchday_results.csv
test/SQL/: test2.sql  test3.sql  test4.sql
test/test-suite/Base/: base.sql
test/test-suite/output/: csv1.csv
test/test-suite/setup/: Customers.csv  Orders.csv  Shippings.csv
test/test-suite/test1/: answer 2.csv  answer 2.sql  answer.sql  result.csv  test1.sql
test/test-suite/test2/: answer 2.sql  answer.sql  test2.sql
test/test-suite/test3/: answer.csv  answer.sql  test3.sql
test/test-suite/test4/: answer.csv  answer.sql  test4.sql
test/test-suite/test5/: answer.csv  test5.sql
test/test-suite/test6/: answer 2.csv  answer 2.sql  test6.sql
test/test-suite/test7/: answer 2.sql  answer.csv  test7.sql
(+3 files in other folders)
